kubernetes/kube-cert-manager.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: kube-cert-manager
  name: kube-cert-manager
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kube-cert-manager
      name: kube-cert-manager
    spec:
      containers:
        - name: kube-cert-manager
          image: us.gcr.io/livegrep/kube-cert-manager:v0.4.0-nelhage1
          args:
            - "-data-dir=/var/lib/cert-manager"
            - "-acme-url=https://acme-v01.api.letsencrypt.org/directory"
          volumeMounts:
            - name: data
              mountPath: /var/lib/cert-manager
            - mountPath: /var/run/secrets/gcp
              name: gcp
              readOnly: true
        - name: kubectl-proxy
          image: lachlanevenson/k8s-kubectl:v1.6.2
          args: [ "proxy" ]
      volumes:
        - name: "data"
          gcePersistentDisk:
            pdName: kube-cert-manager
            fsType: ext4
        - name: gcp
          secret:
            defaultMode: 0644
            secretName: gcp.cert-manager
