kubernetes/frontend.yaml
apiVersion: v1
kind: List
items:
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: livegrep-frontend
  spec:
    replicas: 1
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 0
    template:
      metadata:
        labels:
          app: livegrep-frontend
      spec:
        containers:
        - args: ['/livegrep/bin/livegrep', '-docroot', '/livegrep/web/', '/livegrep/conf/livegrep.json']
          name: livegrep
          image: docker.io/livegrep/frontend:ac5078ceb8-0
          resources:
            requests:
              cpu: 100m
              memory: 100M
          terminationMessagePath: /dev/termination-log
          readinessProbe:
            httpGet:
              path: /debug/healthcheck
              port: 8910
            periodSeconds: 1
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
        - name: nginx
          image: docker.io/livegrep/nginx:ac5078ceb8-0
          resources:
            requests:
              cpu: 100m
              memory: 100M
          terminationMessagePath: /dev/termination-log
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /debug/healthcheck
              port: 80
            periodSeconds: 1
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          volumeMounts:
          - name: nginx-config
            mountPath: /var/run/config/nginx
        volumes:
          - name: nginx-config
            configMap:
              name: nginx-config
        dnsPolicy: ClusterFirst
- apiVersion: v1
  kind: Service
  metadata:
    name: livegrep-frontend
  spec:
    type: NodePort
    ports:
      - port: 80
    selector:
      app: livegrep-frontend
- apiVersion: extensions/v1beta1
  kind: Ingress
  metadata:
    name: livegrep-www
    annotations:
      certmanager.k8s.io/issuer: letsencrypt-production
      certmanager.k8s.io/acme-challenge-type: dns01
      certmanager.k8s.io/acme-dns01-provider: prod-dns
  spec:
    tls:
      - hosts: [ livegrep.com ]
        secretName: livegrep.com
    backend:
      serviceName: livegrep-frontend
      servicePort: 80
